--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img id="class" src="lop.png" alt="">
             <img id="water-flow" src="/anh/water-flow.gif" alt="">
             <img id="air-flow" src="air-flow.gif"  alt="">
-            <p id="pre">Pressure: <span id="apsuat">00</span> Pa</p>
+            <p id="pre">D.Pressure: <span id="apsuat">00</span> Pa</p>
             <p id="tem">Temp: <span id="nhietdo">00</span> ℃</p>
             <p id="call">Filter dirty!!!</p>
             <div class="valve-status">
@@ -116,7 +116,7 @@
                         <div id="rec-auto">
                             <button id="btn-auto">Auto</button>
                                 <div id="box-auto" style="display:none">
-                                    <p>Set point</p>
+                                    <p>Set Temp</p>
                                     <div class="slidecontainer">
                                         <input type="range" min="16" max="31" value="50" class="slider" id="myRange" autocomplete="off">
                                         <p>Value: <span id="demo"></span></p>
